OLS - Add Table Level Lineage
Signed-off-by: Raluca Popa <raluca.popa2@ing.com>